@@ -37,7 +37,7 @@ public class BarebonesAddToStartdTest extends AbstractUseCase
 
         Files.write(baseDir.resolve("start.ini"),
             Collections.singletonList(
-                "--module=main"
+                "--modules=main"
             ),
             StandardCharsets.UTF_8);
 
@@ -45,7 +45,7 @@ public class BarebonesAddToStartdTest extends AbstractUseCase
         List<String> prepareArgs = Arrays.asList(
             "--testing-mode",
             "--create-startd",
-            "--add-module=optional"
+            "--add-modules=optional"
         );
         exec(prepareArgs, true);
 
